# eww-shell

./: .gitignore  README.md  eww.scss  eww.yuck
source-plugins/active-mgr/: Cargo.toml
source-plugins/active-mgr/src/: main.rs
source-plugins/app-launcher/: Cargo.toml
source-plugins/app-launcher/src/: main.rs
source-plugins/cava-visu/: Cargo.toml
source-plugins/cava-visu/src/: main.rs
source-plugins/media-ctl/: Cargo.toml
source-plugins/notification-ctl/: Cargo.toml
source-plugins/notification-ctl/src/: main.rs
source-plugins/widget-manager/: Cargo.toml
source-plugins/widget-manager/src/: main.rs
source-plugins/workspaces-mgr/: Cargo.toml
source-plugins/workspaces-mgr/src/: main.rs
src/modules/: active-window.yuck  calendar.yuck  launcher.yuck  media.yuck  time.yuck  variables.yuck  workspaces.yuck
src/plugins/: app-launcher  wd-mgr  workspaces-mgr
src/scripts/: app-launcher-watch.sh
src/styles/: active-window.scss  bar.scss  calendar.scss  launcher.scss  media.scss  variables.scss  workspaces.scss
