[package]
name = "active-mgr"
version = "0.1.0"
edition = "2024"

[dependencies]
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
